commit con la administracion economica completa